--- a/spineplot/config.toml
+++ b/spineplot/config.toml
@@ -1,6 +1,6 @@
 [analysis]
 ordinate_sample = 'onbeam'
-category_tree = 'category'
+category_branch = 'category'
 category_assignment = [[0,2], [1,3,4,5], [6], [-1,7], [-100]]
 category_labels = ['1$\mu$Np', 'Other CC $\nu$', 'NC $\nu$', 'Cosmic', 'Run 2 Data']
 category_colors = ['C0', 'C1', 'C3', 'C4', 'C2']
