Add functionality to load multiple trees per sample

--- a/spineplot/config.toml
+++ b/spineplot/config.toml
@@ -10,15 +10,18 @@ category_types = ['histogram', 'histogram', 'histogram', 'histogram', 'scatter']
 [samples.mc]
 key = "mc"
 scaling_type = "pot"
+trees = ['selectedNu',]
 
 [samples.offbeam]
 key = "offbeam"
 scaling_type = "pot"
+trees = ['selectedNu',]
 
 [samples.onbeam]
 key = "onbeam"
 scaling_type = "pot"
 override_category = -100
+trees = ['selectedNu',]
 
 [styles]
 [styles.selected]
