Add title, POT, and preliminary marking options to style class/configuration options

--- a/spineplot/configurations/common/styles.toml
+++ b/spineplot/configurations/common/styles.toml
@@ -1,12 +1,36 @@
 [styles]
-[styles.selected]
+[styles.selected_icarus]
 style_sheet = "styles/muon2024.mplstyle"
+title = 'ICARUS $1\mu Np$ CC0$\pi$'
+mark_pot = true
+mark_preliminary = '$\bf{ICARUS}$ Simulation Work-in-Progress'
 show_component_number = true
 show_component_percentage = true
 invert_stack_order = false
 
-[styles.signal]
+[styles.signal_icarus]
 style_sheet = "styles/muon2024.mplstyle"
+title = 'ICARUS $1\mu Np$ CC0$\pi$'
+mark_pot = true
+mark_preliminary = '$\bf{ICARUS}$ Simulation Work-in-Progress'
+show_component_number = true
+show_component_percentage = false
+invert_stack_order = false
+
+[styles.selected_sbnd]
+style_sheet = "styles/muon2024.mplstyle"
+title = 'SBND $1\mu Np$ CC0$\pi$'
+mark_pot = true
+mark_preliminary = '$\bf{SBND}$ Simulation Work-in-Progress'
+show_component_number = true
+show_component_percentage = true
+invert_stack_order = false
+
+[styles.signal_sbnd]
+style_sheet = "styles/muon2024.mplstyle"
+title = 'SBND $1\mu Np$ CC0$\pi$'
+mark_pot = true
+mark_preliminary = '$\bf{SBND}$ Simulation Work-in-Progress'
 show_component_number = true
 show_component_percentage = false
 invert_stack_order = false
