--- a/spineplot/configurations/muon2024_icarus.toml
+++ b/spineplot/configurations/muon2024_icarus.toml
@@ -21,14 +21,14 @@ category_types = ['histogram', 'histogram', 'histogram', 'histogram', 'scatter']
 
 [spectra1D]
 [spectra1D.reco_visible_energy]
-style = 'selected'
+style = 'selected_icarus'
 variable = 'reco_visible_energy'
 
 [spectra2D]
 [spectra2D.visible_energy]
-style = 'selected'
+style = 'selected_icarus'
 variables = ['true_visible_energy', 'reco_visible_energy']
 
 [spectra2D.interaction_pt]
-style = 'selected'
+style = 'selected_icarus'
 variables = ['true_interaction_pt', 'reco_interaction_pt']
