Add sample configuration that points at the signal tree

--- a/spineplot/configurations/common/samples.toml
+++ b/spineplot/configurations/common/samples.toml
@@ -4,6 +4,11 @@ key = "mc"
 exposure_type = "pot"
 trees = ['selectedNu',]
 
+[samples.mcsignal]
+key = "mc"
+exposure_type = "pot"
+trees = ['signal',]
+
 [samples.offbeam]
 key = "offbeam"
 exposure_type = "pot"
