Add selectedCos tree to sample with "mc" key

--- a/spineplot/configurations/common/samples.toml
+++ b/spineplot/configurations/common/samples.toml
@@ -2,7 +2,7 @@
 [samples.mc]
 key = "mc"
 exposure_type = "pot"
-trees = ['selectedNu',]
+trees = ['selectedNu','selectedCos']
 
 [samples.mcsignal]
 key = "mc"
