Add in-time sample (mostly for SBND at this point)

--- a/spineplot/configurations/common/samples.toml
+++ b/spineplot/configurations/common/samples.toml
@@ -19,3 +19,8 @@ key = "onbeam"
 exposure_type = "pot"
 override_category = -100
 trees = ['selectedNu',]
+
+[samples.intime]
+key = "intime"
+exposure_type = "livetime"
+trees = ['selectedCos',]
