Add default figure size to style class and configuration option

--- a/spineplot/configurations/common/styles.toml
+++ b/spineplot/configurations/common/styles.toml
@@ -1,6 +1,7 @@
 [styles]
 [styles.selected_icarus]
 style_sheet = "styles/muon2024.mplstyle"
+default_figsize = [6.4,4.8]
 title = '$\bf{ICARUS}$ $1\mu Np$ CC0$\pi$'
 mark_pot = true
 mark_preliminary = '$\bf{ICARUS}$ Simulation Work-in-Progress'
@@ -10,6 +11,7 @@ invert_stack_order = false
 
 [styles.signal_icarus]
 style_sheet = "styles/muon2024.mplstyle"
+default_figsize = [6.4,4.8]
 title = '$\bf{ICARUS}$ $1\mu Np$ CC0$\pi$'
 mark_pot = true
 mark_preliminary = '$\bf{ICARUS}$ Simulation Work-in-Progress'
@@ -19,6 +21,7 @@ invert_stack_order = false
 
 [styles.selected_sbnd]
 style_sheet = "styles/muon2024.mplstyle"
+default_figsize = [6.4,4.8]
 title = '$\bf{SBND}$ $1\mu Np$ CC0$\pi$'
 mark_pot = true
 mark_preliminary = '$\bf{SBND}$ Simulation Work-in-Progress'
@@ -28,6 +31,7 @@ invert_stack_order = true
 
 [styles.signal_sbnd]
 style_sheet = "styles/muon2024.mplstyle"
+default_figsize = [6.4,4.8]
 title = '$\bf{SBND}$ $1\mu Np$ CC0$\pi$'
 mark_pot = true
 mark_preliminary = '$\bf{SBND}$ Simulation Work-in-Progress'
