Update preliminary mark for "selected" style plots

--- a/spineplot/configurations/common/styles.toml
+++ b/spineplot/configurations/common/styles.toml
@@ -4,7 +4,7 @@ style_sheet = "styles/muon2024.mplstyle"
 default_figsize = [6.4,4.8]
 title = '$\bf{ICARUS}$ $1\mu Np$ CC0$\pi$'
 mark_pot = true
-mark_preliminary = '$\bf{ICARUS}$ Simulation Work-in-Progress'
+mark_preliminary = '$\bf{ICARUS}$ Work-in-Progress'
 show_component_number = true
 show_component_percentage = true
 invert_stack_order = false
@@ -24,7 +24,7 @@ style_sheet = "styles/muon2024.mplstyle"
 default_figsize = [6.4,4.8]
 title = '$\bf{SBND}$ $1\mu Np$ CC0$\pi$'
 mark_pot = true
-mark_preliminary = '$\bf{SBND}$ Simulation Work-in-Progress'
+mark_preliminary = '$\bf{SBND}$ Work-in-Progress'
 show_component_number = true
 show_component_percentage = true
 invert_stack_order = false
