--- a/spineplot/quick/pi0_quick_config.toml
+++ b/spineplot/quick/pi0_quick_config.toml
@@ -4,6 +4,12 @@ title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
 xlabel = 'Reconstructed Neutral Pion Mass [MeV/c$^{2}$]'
 ylabel = 'Candidates'
 
+[variables.pi0_leading_photon_conv_dist]
+bins = [25, 0, 100]
+title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
+xlabel = 'Reconstructed $\pi^{0}$ Leading Photon Conversion Distance [cm]'
+ylabel = 'Candidates'
+
 [analysis_mc]
 category_assignment = [[0], [1], [2], [3], [4], [5], [6], [7]]
 category_branch = 'category_topology'
