--- a/spineplot/quick/pi0_quick_config.toml
+++ b/spineplot/quick/pi0_quick_config.toml
@@ -1,7 +1,19 @@
-[variables.pi0_mass]
-bins = [40, 0, 400]
+[variables.muon_momentum_mag]
+bins = [30, 0, 3000]
 title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
-xlabel = 'Reconstructed Neutral Pion Mass [MeV/c$^{2}$]'
+xlabel = 'Reconstructed Muon Momentum [MeV/c]'
+ylabel = 'Candidates'
+
+[variables.muon_beam_costheta]
+bins = [20, -1, 1]
+title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
+xlabel = 'Reconstructed $\cos(\theta_{\mu})$'
+ylabel = 'Candidates'
+
+[variables.pi0_leading_photon_energy]
+bins = [40, 0, 1000]
+title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
+xlabel = 'Reconstructed $\pi^{0}$ Leading Photon Energy [cm]'
 ylabel = 'Candidates'
 
 [variables.pi0_leading_photon_conv_dist]
@@ -9,6 +21,39 @@ bins = [25, 0, 100]
 title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
 xlabel = 'Reconstructed $\pi^{0}$ Leading Photon Conversion Distance [cm]'
 ylabel = 'Candidates'
+
+[variables.pi0_subleading_photon_energy]
+bins = [40, 0, 1000]
+title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
+xlabel = 'Reconstructed $\pi^{0}$ Subleading Photon Energy [cm]'
+ylabel = 'Candidates'
+
+[variables.pi0_subleading_photon_conv_dist]
+bins = [25, 0, 100]
+title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
+xlabel = 'Reconstructed $\pi^{0}$ Subleading Photon Conversion Distance [cm]'
+ylabel = 'Candidates'
+
+[variables.pi0_momentum_mag]
+bins = [50, 0, 2000]
+title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
+xlabel = 'Reconstructed $\pi^{0}$ Momentum [MeV/c]'
+ylabel = 'Candidates'
+
+[variables.pi0_beam_costheta]
+bins = [20, -1, 1]
+title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
+xlabel = 'Reconstructed $\cos(\theta_{\pi^{0}})$'
+ylabel = 'Candidates'
+
+[variables.pi0_mass]
+bins = [40, 0, 400]
+title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
+xlabel = 'Reconstructed Neutral Pion Mass [MeV/c$^{2}$]'
+ylabel = 'Candidates'
+
+
+
 
 [analysis_mc]
 category_assignment = [[0], [1], [2], [3], [4], [5], [6], [7]]
