--- a/spineplot/quick/pi0_quick_config.toml
+++ b/spineplot/quick/pi0_quick_config.toml
@@ -1,5 +1,6 @@
 [variables.muon_momentum_mag]
 bins = [30, 0, 3000]
+#bins = [25, 0, 3000]
 title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
 xlabel = 'Reconstructed Muon Momentum [MeV/c]'
 ylabel = 'Candidates'
@@ -11,9 +12,9 @@ xlabel = 'Reconstructed $\cos(\theta_{\mu})$'
 ylabel = 'Candidates'
 
 [variables.pi0_leading_photon_energy]
-bins = [40, 0, 1000]
+bins = [20, 0, 1000]
 title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
-xlabel = 'Reconstructed $\pi^{0}$ Leading Photon Energy [cm]'
+xlabel = 'Reconstructed $\pi^{0}$ Leading Photon Energy [MeV]'
 ylabel = 'Candidates'
 
 [variables.pi0_leading_photon_conv_dist]
@@ -23,9 +24,9 @@ xlabel = 'Reconstructed $\pi^{0}$ Leading Photon Conversion Distance [cm]'
 ylabel = 'Candidates'
 
 [variables.pi0_subleading_photon_energy]
-bins = [40, 0, 1000]
+bins = [20, 0, 1000]
 title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
-xlabel = 'Reconstructed $\pi^{0}$ Subleading Photon Energy [cm]'
+xlabel = 'Reconstructed $\pi^{0}$ Subleading Photon Energy [MeV]'
 ylabel = 'Candidates'
 
 [variables.pi0_subleading_photon_conv_dist]
@@ -52,12 +53,22 @@ title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
 xlabel = 'Reconstructed Neutral Pion Mass [MeV/c$^{2}$]'
 ylabel = 'Candidates'
 
+#[variables.visible_energy]
+#bins = [40, 0, 4]
+#title = 'Selected $\nu_{\mu}$ CC $\pi^{0}$'
+#xlabel = 'Reconstructed Visible Energy [GeV]'
+#ylabel = 'Candidates'
 
-
+#[analysis_mc]
+#category_assignment = [[0], [1], [2], [3], [4], [5], [6], [7]]
+#category_branch = 'category_topology'
+#category_labels = ['1$\mu$0$\pi^{±}$1$\pi^{0}$', '1$\mu$0$\pi^{±}$1$\pi^{0}$ (OOPS)', '1$\mu$N$\pi^{±}$1$\pi^{0}$', '1$\mu$N$\pi^{±}$0$\pi^{0}$', '1$\mu$N$\pi^{0}$', 'NC 1$\pi^{0}$ ', 'Other $\nu$', 'Cosmic']
+#category_colors = ['#1b9e77', '#dea0fd', '#4c78a8', '#e5c494', '#e45756', '#17becf', '#f58518', '#a6761d']
+#category_types = ['histogram', 'histogram', 'histogram', 'histogram', 'histogram', 'histogram', 'histogram', 'histogram']
 
 [analysis_mc]
-category_assignment = [[0], [1], [2], [3], [4], [5], [6], [7]]
-category_branch = 'category_topology'
-category_labels = ['1$\mu$0$\pi^{±}$1$\pi^{0}$', '1$\mu$0$\pi^{±}$1$\pi^{0}$ (OOPS)', '1$\mu$N$\pi^{±}$1$\pi^{0}$', '1$\mu$N$\pi^{±}$0$\pi^{0}$', '1$\mu$N$\pi^{0}$', 'NC 1$\pi^{0}$ ', 'Other $\nu$', 'Cosmic']
-category_colors = ['#1b9e77', '#dea0fd', '#4c78a8', '#e5c494', '#e45756', '#17becf', '#f58518', '#a6761d']
-category_types = ['histogram', 'histogram', 'histogram', 'histogram', 'histogram', 'histogram', 'histogram', 'histogram']
+category_assignment = [[0], [1], [2], [3], [4], [5]]
+category_branch = 'category_topology_simple'
+category_labels = ['1$\mu$0$\pi^{±}$1$\pi^{0}$', '1$\mu$0$\pi^{±}$N$\pi^{0}$', '1$\mu$N$\pi^{±}$', 'Other CC $\nu$', 'NC $\nu$', 'Cosmic']
+category_colors = ['#1b9e77', '#dea0fd', '#4c78a8', '#f58518', '#17becf', '#a6761d']
+category_types = ['histogram', 'histogram', 'histogram', 'histogram', 'histogram', 'histogram']
