Update systematics configuration file for muon2024 analysis

--- a/systematics/configurations/muon2024_icarus.toml
+++ b/systematics/configurations/muon2024_icarus.toml
@@ -1,27 +1,23 @@
 [input]
-path = 'muon2024_sys_rev4.root'
-caflist = 'small_input_list.txt'
+path = 'muon2024_pro.root'
+caflist = 'input_files.txt'
 
 [output]
-path = 'muon2024_full_devdev.root'
+path = 'muon2024_pro_dev.root'
 histogram_destination = 'variations/'
 
 [[sysvar]]
 name = 'reco_edep'
 bins = [25, 0, 3]
 
-[[sysvar]]
-name = 'reco_tmuon'
-bins = [25, 0, 2000]
-
 [variations]
-keys = ['mc', 'var00', 'var01', 'var02m', 'var02p', 'var03', 'var04', 'var05', 'var06m']
+keys = ['mc', 'var00', 'var01', 'var02', 'var03m', 'var03p', 'var04', 'var05', 'var06', 'var07', 'var08', 'var09']
 origin = 'events/'
 tree = 'selectedNu'
 result_destination = 'detsys_results/'
 variable = 'reco_edep'
 bins = [10, 0, 3]
-nuniverses = 100000
+nuniverses = 10000
 
 [[tree]]
 origin = 'events/mc/selectedNu'
@@ -29,6 +25,12 @@ destination = 'events/mc/'
 name = 'selectedNu'
 action = 'add_weights'
 table_types = ['multisim', 'multisigma', 'variation']
+
+[[tree]]
+origin = 'events/onbeam/selectedNu'
+destination = 'events/onbeam/'
+name = 'selectedNu'
+action = 'copy'
 
 [[sys]]
 name = 'var00'
@@ -53,18 +55,18 @@ name = 'var02'
 type = 'variation'
 index = -1
 nsigma = [-3, -2, -1, 0, 1, 2, 3]
-scale = [3, 2, 1, 1, 1, 2, 3]
+scale = [-3, -2, -1, 1, 1, 2, 3]
 ordinate = 'mc'
-points = ['var02m', 'var02m', 'var02m', 'mc', 'var02p', 'var02p', 'var02p']
+points = ['var02', 'var02', 'var02', 'mc', 'var02', 'var02', 'var02']
 
 [[sys]]
 name = 'var03'
 type = 'variation'
 index = -1
 nsigma = [-3, -2, -1, 0, 1, 2, 3]
-scale = [-3, -2, -1, 1, 1, 2, 3]
+scale = [3, 2, 1, 1, 1, 2, 3]
 ordinate = 'mc'
-points = ['var03', 'var03', 'var03', 'mc', 'var03', 'var03', 'var03']
+points = ['var03m', 'var03m', 'var03m', 'mc', 'var03p', 'var03p', 'var03p']
 
 [[sys]]
 name = 'var04'
@@ -81,8 +83,8 @@ type = 'variation'
 index = -1
 nsigma = [-3, -2, -1, 0, 1, 2, 3]
 scale = [-3, -2, -1, 1, 1, 2, 3]
-ordinate = 'mc'
-points = ['var05', 'var05', 'var05', 'mc', 'var05', 'var05', 'var05']
+ordinate = 'var00'
+points = ['var05', 'var05', 'var05', 'var00', 'var05', 'var05', 'var05']
 
 [[sys]]
 name = 'var06'
@@ -91,7 +93,34 @@ index = -1
 nsigma = [-3, -2, -1, 0, 1, 2, 3]
 scale = [-3, -2, -1, 1, 1, 2, 3]
 ordinate = 'mc'
-points = ['var06m', 'var06m', 'var06m', 'mc', 'var06m', 'var06m', 'var06m']
+points = ['var06', 'var06', 'var06', 'mc', 'var06', 'var06', 'var06']
+
+[[sys]]
+name = 'var07'
+type = 'variation'
+index = -1
+nsigma = [-3, -2, -1, 0, 1, 2, 3]
+scale = [-3, -2, -1, 1, 1, 2, 3]
+ordinate = 'var00'
+points = ['var07', 'var07', 'var07', 'var00', 'var07', 'var07', 'var07']
+
+[[sys]]
+name = 'var08'
+type = 'variation'
+index = -1
+nsigma = [-3, -2, -1, 0, 1, 2, 3]
+scale = [-3, -2, -1, 1, 1, 2, 3]
+ordinate = 'mc'
+points = ['var08', 'var08', 'var08', 'mc', 'var08', 'var08', 'var08']
+
+[[sys]]
+name = 'var09'
+type = 'variation'
+index = -1
+nsigma = [-3, -2, -1, 0, 1, 2, 3]
+scale = [-3, -2, -1, 1, 1, 2, 3]
+ordinate = 'mc'
+points = ['var09', 'var09', 'var09', 'mc', 'var09', 'var09', 'var09']
 
 [[sys]]
 name = 'GENIEReWeight_SBN_v1_multisigma_ZExpA1CCQE'
@@ -103,3 +132,213 @@ zscores = [-1, 1, -2, 2, -3, 3]
 name = 'GENIEReWeight_SBN_v1_multisim_ZExpAVariationResponse'
 type = 'multisim'
 index = 52
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_RPA_CCQE'
+type = 'multisim'
+index = 53
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_CoulombCCQE'
+type = 'multisim'
+index = 54
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_NormCCMEC'
+type = 'multisim'
+index = 55
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_NormNCMEC'
+type = 'multisim'
+index = 56
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_NCELVariationResponse'
+type = 'multisim'
+index = 57
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_CCRESVariationResponse'
+type = 'multisim'
+index = 58
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_NCRESVariationResponse'
+type = 'multisim'
+index = 59
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_NonRESBGvpCC1pi'
+type = 'multisim'
+index = 60
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_NonRESBGvpCC2pi'
+type = 'multisim'
+index = 61
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_NonRESBGvpNC1pi'
+type = 'multisim'
+index = 62
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_NonRESBGvpNC2pi'
+type = 'multisim'
+index = 63
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_NonRESBGvnCC1pi'
+type = 'multisim'
+index = 64
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_NonRESBGvnCC2pi'
+type = 'multisim'
+index = 65
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_NonRESBGvnNC1pi'
+type = 'multisim'
+index = 66
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_NonRESBGvnNC2pi'
+type = 'multisim'
+index = 67
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_NonRESBGvbarpCC1pi'
+type = 'multisim'
+index = 68
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_NonRESBGvbarpCC2pi'
+type = 'multisim'
+index = 69
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_NonRESBGvbarpNC1pi'
+type = 'multisim'
+index = 70
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_NonRESBGvbarpNC2pi'
+type = 'multisim'
+index = 71
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_NonRESBGvbarnCC1pi'
+type = 'multisim'
+index = 72
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_NonRESBGvbarnCC2pi'
+type = 'multisim'
+index = 73
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_NonRESBGvbarnNC1pi'
+type = 'multisim'
+index = 74
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_NonRESBGvbarnNC2pi'
+type = 'multisim'
+index = 75
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_RDecBR1gamma'
+type = 'multisim'
+index = 76
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_RDecBR1eta'
+type = 'multisim'
+index = 77
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_COHVariationResponse'
+type = 'multisim'
+index = 78
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_DISBYVariationResponse'
+type = 'multisim'
+index = 79
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_FSI_pi_VariationResponse'
+type = 'multisim'
+index = 80
+
+[[sys]]
+name = 'GENIEReWeight_SBN_v1_multisim_FSI_N_VariationResponse'
+type = 'multisim'
+index = 81
+
+[[sys]]
+name = 'expskin_Flux'
+type = 'multisim'
+index = 115
+
+[[sys]]
+name = 'horncurrent_Flux'
+type = 'multisim'
+index = 116
+
+[[sys]]
+name = 'kminus_Flux'
+type = 'multisim'
+index = 117
+
+[[sys]]
+name = 'kplus_Flux'
+type = 'multisim'
+index = 118
+
+[[sys]]
+name = 'kzero_Flux'
+type = 'multisim'
+index = 119
+
+[[sys]]
+name = 'nucleoninexsec_Flux'
+type = 'multisim'
+index = 120
+
+[[sys]]
+name = 'nucleonqexsec_Flux'
+type = 'multisim'
+index = 121
+
+[[sys]]
+name = 'nucleontotxsec_Flux'
+type = 'multisim'
+index = 122
+
+[[sys]]
+name = 'piminus_Flux'
+type = 'multisim'
+index = 123
+
+[[sys]]
+name = 'pioninexsec_Flux'
+type = 'multisim'
+index = 124
+
+[[sys]]
+name = 'pionqexsec_Flux'
+type = 'multisim'
+index = 125
+
+[[sys]]
+name = 'piontotxsec_Flux'
+type = 'multisim'
+index = 126
+
+[[sys]]
+name = 'piplus_Flux'
+type = 'multisim'
+index = 127
