Update sbnanaobj include and library paths

--- a/systematics/CMakeLists.txt
+++ b/systematics/CMakeLists.txt
@@ -15,7 +15,8 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(tomlplusplus)
 
-set(SBNANAOBJ_INCLUDE_DIRS "$ENV{MRB_SOURCE}/sbnanaobj/")
+set(SBNANAOBJ_INCLUDE_DIRS "$ENV{MRB_INSTALL}/sbnanaobj/$ENV{SBNANAOBJ_VERSION}/include")
+set(SBNANAOBJ_LIBRARY_DIRS "$ENV{MRB_INSTALL}/sbnanaobj/$ENV{SBNANAOBJ_VERSION}/slf7.x86_64.e26.prof/lib")
 
 file(GLOB SYSINC "include/*.h")
 
